<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name_ch">解密陌生人</string>
    <string name="login">登 录</string>
    <string name="account">用户名</string>
    <string name="password">密码</string>
    <string name="auto_save_password">记住密码</string>
    <string name="register_text">注册新账号</string>
    <string name="register_title">注  册</string>
    <string name="account_input">请输入用户名</string>
    <string name="password_input">请输入密码</string>
    <string name="re_password_input">请再次输入密码</string>
    <string name="username_input">请输入昵称</string>
    <string name="email_input">请输入邮箱</string>
    <string name="phone_input">请输入手机号</string>
    <string name="birth_input">请输入出生年月</string>
    <string name="sex_input">请选择性别</string>
    <string name="next_step">下一步</string>
    <string name="previous_step">上一步</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="confirm">确 定</string>
    <string name="user_name_display">呢称：</string>
    <string name="sex_display">性别</string>
    <string name="add_friend">添加好友</string>
    <string name="nearby_info_back">返  回</string>
    <string name="game">游 戏</string>
    <string name="portrait">头像</string>
    <string name="name">昵称</string>
    <string name="updateName">更改昵称</string>
    <string name="updatePortrait">更换头像</string>
    <string name="nameTip">好的昵称可以让你的朋友更容易记住你</string>
    <string name="account_lab">解密账号</string>
    <string name="sex">性别</string>
    <string name="sound">声音</string>
    <string name="main_quit">退    出</string>
    <string name="shake">摇 一 摇</string>
    <string name="near_friends">附近的人</string>
    <string name="shake_effect">震动</string>
    <string name="grade_settings">难度设置</string>
    <string name="save">保 存</string>
    <string name="effectMusic">游戏音效</string>
    <string name="backgroundMusic">背景音乐</string>
    <string name="setting">设  置</string>
    <string name="new_friend">新的好友</string>
    <string name="str_recorder_normal">按住 说话</string>
    <string name="str_recorder_recording">松开 结束</string>
    <string name="str_recorder_want_cancel">松开手指，取消发送</string>
    <string name="str_recorder_cancel_send">手指上滑，取消发送</string>
    <string name="update">上传</string>

    <string name="life">生 活</string>
    <string name="hobby">猜你喜欢</string>
    <string name="myLife">个人中心</string>
    <string name="send">发 起</string>
    <string name="food">美 食</string>
    <string name="travel">旅 游</string>
    <string name="others">休闲娱乐</string>
    <string name="lifeName">活动名称</string>
    <string name="lifeSpace">活动地点</string>
    <string name="lifeTime">活动日期</string>
    <string name="peopleMax">活动人数</string>
    <string name="timeEnd">报名截止</string>
    <string name="rallySpace">集合地点</string>
    <string name="rallyTime">集合时间</string>
    <string name="lifePassword">活动口令</string>
    <string name="publish">发 布</string>
    <string name="partake">参 团</string>
    <string name="lifeClass">类 别</string>
    <string name="distance">距 离</string>
    <string name="time">时 间</string>
    <string name="favorite">欢迎度</string>
    <string name="details">详 情</string>
    <string name="addFriend">加为好友</string>
    <string name="lifeShare">晒 图</string>
    <string name="doShare">分 享</string>
    <string name="shareTip">来晒晒图分享一下现在的心情吧~</string>
    <string name="mySend">我的发起</string>
    <string name="myPartake">我的参团</string>

    <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部数据</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>

</resources>
