<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/register_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:background="@null"
        android:onClick="RegisterBaseOnClick"
        android:src="@drawable/back_btn" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_below="@+id/register_back_button"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/register_account_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/login_input_bg"
                android:drawableRight="@null"
                android:hint="@string/account_input"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:maxLines="1"
                android:onClick="RegisterBaseOnClick"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/text_hint"
                android:textColorHint="@color/text_hint"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/register_password_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:background="@drawable/login_input_bg"
                android:drawableRight="@null"
                android:hint="@string/password_input"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:onClick="RegisterBaseOnClick"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/text_hint"
                android:textColorHint="@color/text_hint"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/register_re_paw_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:background="@drawable/login_input_bg"
                android:drawableRight="@null"
                android:hint="@string/re_password_input"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:onClick="RegisterBaseOnClick"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/text_hint"
                android:textColorHint="@color/text_hint"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/register_username_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:background="@drawable/login_input_bg"
                android:drawableRight="@null"
                android:hint="@string/username_input"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:maxLines="1"
                android:onClick="RegisterBaseOnClick"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/text_hint"
                android:textColorHint="@color/text_hint"
                android:textSize="22dp" />

            <RelativeLayout
                android:id="@+id/register_usersex_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:background="@drawable/login_input_bg">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/sex_input"
                    android:textColor="@color/text_hint"
                    android:textSize="22dp" />

                <RadioGroup
                    android:id="@+id/userSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="22dp"
                    android:layout_toRightOf="@+id/textView"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/manRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@null"
                        android:button="@null"
                        android:checked="true"
                        android:drawablePadding="10dp"
                        android:drawableRight="@drawable/checkbox_bg_h"
                        android:text="@string/man"
                        android:textColor="@color/text_hint"
                        android:textSize="22dp" />

                    <RadioButton
                        android:id="@+id/womanRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:button="@null"
                        android:drawablePadding="10dp"
                        android:drawableRight="@drawable/checkbox_bg_h"
                        android:text="@string/woman"
                        android:textColor="@color/text_hint"
                        android:textSize="22dp" />

                </RadioGroup>

            </RelativeLayout>

            <EditText
                android:id="@+id/register_email_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_usersex_input"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:background="@drawable/login_input_bg"
                android:drawableRight="@null"
                android:hint="@string/email_input"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="20"
                android:maxLines="1"
                android:onClick="RegisterBaseOnClick"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/text_hint"
                android:textColorHint="@color/text_hint"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/register_phone_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_email_input"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:background="@drawable/login_input_bg"
                android:drawableRight="@null"
                android:hint="@string/phone_input"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="20"
                android:maxLines="1"
                android:onClick="RegisterBaseOnClick"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="@color/text_hint"
                android:textColorHint="@color/text_hint"
                android:textSize="22dp" />

            <Button
                android:id="@+id/register_birth_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:background="@drawable/login_input_bg"
                android:gravity="left|center"
                android:onClick="RegisterBaseOnClick"
                android:paddingLeft="20dp"
                android:text="@string/birth_input"
                android:textColor="@color/text_hint"
                android:textSize="22dp" />

            <Button
                android:id="@+id/next_step_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_button_bg"
                android:onClick="RegisterBaseOnClick"
                android:text="@string/next_step"
                android:textColor="@color/btn_text"
                android:textSize="26dp" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>